--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <nav class="navbar">
         <div class="container">
           <div class="brand">
-            <img src="Asstes/logo.png" alt="Brand" />
+            <img src="Asstes/Digital Webhub white.png" alt="Brand" />
           </div>
           <div class="menu">
             <i class="bi bi-list"></i>
